RESOLVED FIXED97928
Compilation warning in TextureMapperGL [-Wsign-compare]
https://bugs.webkit.org/show_bug.cgi?id=97928
Summary Compilation warning in TextureMapperGL [-Wsign-compare]
Alberto Garcia
Reported 2012-09-28 12:05:22 PDT
../../Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp:736:38: warning: comparison between signed and unsigned integer expressions [-Wsign-compare] FilterOperations should be iterated using an unsigned integer.
Attachments
Patch (1.35 KB, patch)
2012-09-28 12:08 PDT, Alberto Garcia
no flags
Alberto Garcia
Comment 1 2012-09-28 12:08:51 PDT
Martin Robinson
Comment 2 2012-09-28 12:09:48 PDT
Comment on attachment 166288 [details] Patch Thanks!
WebKit Review Bot
Comment 3 2012-09-28 12:29:57 PDT
Comment on attachment 166288 [details] Patch Clearing flags on attachment: 166288 Committed r129931: <http://trac.webkit.org/changeset/129931>
WebKit Review Bot
Comment 4 2012-09-28 12:30:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.