TextureMapperGL: fix -Wsign-compare compilation warning. https://bugs.webkit.org/show_bug.cgi?id=97928

Patch by Alberto Garcia <agarcia@igalia.com> on 2012-09-28
Reviewed by Martin Robinson.

Use size_t rather than int to iterate over FilterOperations.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::BitmapTextureGL::applyFilters):

Canonical link: https://commits.webkit.org/115936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129931 268f45cc-cd09-0410-ab3c-d52691b4dbfc